--- a/app/src/main/res/layout/activity_enter_room.xml
+++ b/app/src/main/res/layout/activity_enter_room.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical">
 
 
+
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -25,26 +27,57 @@
             android:text="@string/done" />
     </android.support.v7.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/room_tip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/color_black_999999"
-        android:textSize="13sp" />
-
-    <EditText
-        android:id="@+id/room_edit"
+    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/edittext_back"
-        android:hint="请输入创建房间名称"
-        android:padding="5dp"
-        android:textColor="@color/color_black_999999"
-        android:textSize="17sp" />
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        app:srlPrimaryColor="#ffffff"
+        app:srlAccentColor="@color/cardview_dark_background"
+        app:srlEnablePreviewInEditMode="true">
+    <com.scwang.smart.refresh.header.ClassicsHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/room_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/color_black_999999"
+                android:textSize="13sp" />
+
+            <EditText
+                android:id="@+id/room_edit"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal"
+                android:padding="5dp"
+                android:textColor="@color/color_black_999999"
+                android:textSize="17sp" />
+            <Spinner
+                android:id="@+id/enter_room_listView_spinner"
+                android:layout_width="200dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"/>
+            <ListView
+                android:id="@+id/enter_room_listView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <com.scwang.smart.refresh.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
 </LinearLayout>
