--- a/app/src/main/res/layout/chat_room_fragment_bar.xml
+++ b/app/src/main/res/layout/chat_room_fragment_bar.xml
@@ -25,7 +25,7 @@
         android:lines="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="房间：xxxxx"
+        android:text="房间："
         android:textColor="@color/white"
         android:textSize="14sp" />
 
