--- a/app/src/main/res/layout/chat_room_fragment_top.xml
+++ b/app/src/main/res/layout/chat_room_fragment_top.xml
@@ -11,27 +11,16 @@
         android:id="@+id/new_chat_room_viewpager_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <com.netease.lava.nertc.sdk.video.NERtcVideoView
+        android:id="@+id/vv_local_user"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+
+    </com.netease.lava.nertc.sdk.video.NERtcVideoView>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/btn_apply_or_close_interaction"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/chat_room_gray_round_selector"
-            android:gravity="center"
-            android:text="互动"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            android:visibility="gone"
-            tools:visibility="visible" />
 
 
         <LinearLayout
@@ -53,7 +42,6 @@
                 android:text="屏幕\n共享"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                android:visibility="gone"
                 tools:visibility="visible" />
 
             <TextView
@@ -67,24 +55,8 @@
                 android:text="视频"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                android:visibility="gone"
                 tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/tv_white_board"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/chat_room_gray_round_selector"
-                android:enabled="true"
-                android:gravity="center"
-                android:lines="2"
-                android:text="白板"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:visibility="gone"
-                tools:visibility="visible" />
 
         </LinearLayout>
 
